static/css/style.css
<style>
.jumbotron {
    background-color: #FF0000 !important; /* Blue */
    color: #FF0000 !important;
}
.container-fluid {
    max-width: 1000px;
}
.container {
  max-width: 1000px;
}
.bg-grey {
    background-color: #213236 ;
}
div.table{
  border: 1px solid black; 
  max-height: 300px; 
  overflow: auto;
}
.centered-text {
text-align:center
}   
html, body, #container {
  height: 100%;
  width: 100%;
  overflow-y:;
}
html {
  overflow-x: hidden !important;
}
body {
  padding-top: 50px;
}
.scrollable {
  height: 100%;
  overflow: auto !important;
}
input[type="radio"], input[type="checkbox"] {
  margin: 0;
}
#sidebar {
  position: relative;
  width: 200px;
  height: 100%;
  max-width: 100%;
  float: right;
  z-index: 11;
  -webkit-transition: all 0.5s ease-out;
  -moz-transition: all 0.5s ease-out;
  transition: all 0.5s ease-out;
}
#map {
  position: relative;
  width: auto;
  height: 100%;
}
#btn.btn-primary.savedesign {
  position: absolute;
  left: 50%;
  top: 55px;
}
#loading {
  position: absolute;
  width: 220px;
  height: 19px;
  top: 50%;
  left: 50%;
  margin: -10px 0 0 -110px;
  z-index: 20001;
}

#features {
  margin: 0px;
  border: none;
  border-radius: 0px;
  -webkit-box-shadow: none;
    box-shadow: none;
}

#aboutTabsContent {
  padding-top: 10px;
}
.progress-bar-full {
  width: 100%;
}
.white {
  color: #FFFFFF;
}
.feature-row {
  cursor: pointer;
}
#sidebar-hide-btn {
  margin-top: -2px;
}
#sidebar-toggle-btn {
  background-color: rgba(255, 255, 255, 0.9);
  text-align: center;
  /*position: relative;
  top: 55px;
  right: 1px;
  z-index:1;
  -webkit-transform: translateZ(0);*/
}

.sidebar-wrapper {
  width: 100%;
  height: 100%;
  position: relative;
}
.sidebar-table {
  position: absolute;
  width: 100%;
  top: 103px;
  bottom: 0px;
  overflow: auto;
}
.leaflet-control-layers {
  overflow: auto;
}
.leaflet-control-layers label {
  font-weight: normal;
  margin-bottom: 0px;
}
.leaflet-control-layers-list input[type="radio"], input[type="checkbox"] {
  margin: 2px;
}
.table {
  margin-bottom: 0px;
}

.navbar-default .navbar-nav > li > a:hover,
.navbar-default .navbar-nav > li > a:focus {
    color: #777;
}

.social .fa-facebook:hover {
    color: #4060A5;
}

.social .fa-twitter:hover {
    color: #00ABE3;
}

.social .fa-google-plus:hover {
    color: #e64522;
}

.social .fa-linkedin:hover {
    color: #0094BC;
}

.social .fa-instagram:hover {
    color: #517fa4;
}

.btnz {
   display: inline-block;
   text-align:center;
   padding: 10px 10px;
   border:none;
   background-color: #ececec;
   text-decoration: none;
   font-size: 16px;
   color: #FFF;
}
 
.btnz:hover {
   color: #efefef;
}

.social .fa-pinterest:hover {
    color: #e64522;
}
.facebook {
   background-color: #3b5998;
}
 
.gplus {
   background-color: #dd4b39;
}
 
.twitter {
   background-color: #55acee;
}
 
.pinterest {
   background-color: #cc2127;
}
 
.linkedin {
   background-color: #0077b5;
}
.navbar {
  background-color: #213236;
  font-family: "Roboto","HelveticaNeue","Helvetica Neue",sans-serif;
  font-size: 1.07143em;
  font-weight: 700;
}

.navbar .navbar-brand {
  font-weight: 700;
  font-size: 25px;
  color: #f7f7f7;
}

.navbar-collapse.in {
  overflow-y: hidden;
}
.navbar-header .navbar-icon-container {
  margin-right: 15px;
}
.navbar-header .navbar-icon {
  line-height: 50px;
  height: 50px;
}
.navbar-header a.navbar-icon {
  margin-left: 25px;
}
.typeahead {
  background-color: #213236;
}
.tt-dropdown-menu {
  background-color: #FFFFFF;
  border: 1px solid rgba(0, 0, 0, 0.2);
  border-radius: 4px 4px 4px 4px;
  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
  margin-top: 4px;
  padding: 4px 0;
  width: 100%;
  max-height: 300px;
  overflow: auto;
}
.tt-suggestion {
  font-size: 14px;
  line-height: 20px;
  padding: 3px 10px;
}
.tt-suggestion.tt-cursor {
  background-color: #0097CF;
  color: #FFFFFF;
  cursor: pointer;
}
.tt-suggestion p {
  margin: 0;
}
.tt-suggestion + .tt-suggestion {
  border-top: 1px solid #ccc;
}
.typeahead-header {
  margin: 0 5px 5px 5px;
  padding: 3px 0;
  border-bottom: 2px solid #333;
}
.has-feedback .form-control-feedback {
  position: absolute;
  top: 0;
  right: 0;
  display: block;
  width: 34px;
  height: 34px;
  line-height: 34px;
  text-align: center;
}
@media (max-width: 992px) {
  .navbar .navbar-brand {
    font-size: 18px;
  }
}
@media (max-width: 767px){
  #sidebar {
    display: none;
  }
  .url-break {
    word-break: break-all;
    word-break: break-word;
    -webkit-hyphens: auto;
      hyphens: auto;
  }
  .dropdown-menu a i{
    color: #FFFFFF;
  }
}

@media (body, input, textarea, button, select) {
    -webkit-font-smoothing: antialiased;
    -webkit-text-size-adjust: 100%;
}

/* Footer */
@media (max-height:800px){
  footer { position: static; }
  header { padding-top:40px; }
}

footer{
  position: fixed;
  bottom: 0;
}

.footer-distributed{
  background-color: #213236;
  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
  box-sizing: border-box;
  width: 100%;
  text-align: left;
  font: normal 16px sans-serif;

  padding: 45px 50px;
  margin-top: 80px;
}

.footer-distributed .footer-left p{
  color:  #8f9296;
  font-size: 14px;
  margin: 0;
}

/* Footer links */

.footer-distributed p.footer-links{
  font-size:18px;
  font-weight: bold;
  color:  #ffffff;
  margin: 0 0 10px;
  padding: 0;
}

.footer-distributed p.footer-links a{
  display:inline-block;
  line-height: 1.8;
  text-decoration: none;
  color:  inherit;
}

.footer-distributed .footer-right{
  float: right;
  margin-top: 6px;
  max-width: 180px;
}

.footer-distributed .footer-right a{
  display: inline-block;
  width: 35px;
  height: 35px;
  background-color: #213236;
  border-radius: 2px;

  font-size: 20px;
  color: #ffffff;
  text-align: center;
  line-height: 35px;

  margin-left: 3px;
}

/* If you don't want the footer to be responsive, remove these media queries */

@media (max-width: 600px) {

  .footer-distributed .footer-left,
  .footer-distributed .footer-right{
    text-align: center;
  }

  .footer-distributed .footer-right{
    float: none;
    margin: 0 auto 20px;
  }

  .footer-distributed .footer-left p.footer-links{
    line-height: 1.8;
  }
}
/*  ---------  Now the UI buttons  ---------  */
#render_map {
  position: absolute;
  top: 10px;
  margin-right: auto;
  margin-left: auto;
  width: 125px;
  height: 30px;
  padding: 5px auto;
  border-radius: 5px;
  font-size: 18px;
  text-align: center;
  color: #fff;
  background-color: #213236;
  }
  #snapshot {
  position:relative;
  width: auto;
  height: auto;
  }
div.slider.slider-horizontal {
  width: 150px;
  }
img {
  display: block;
  background-position: center center;
}

/* Contact form */
form label {
  font-size: 1.2em;
  font-weight: bold;
  display: block;
  padding: 10px 0;
}
 
form input#name,
form input#email,
form input#subject {
  width: 400px;
  background-color: #fafafa;
  -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
          border-radius: 3px;
  border: 1px solid #cccccc;
  padding: 5px;
  font-size: 1.1em;
}
 
form textarea#message {
  width: 500px;
  height: 100px;
  background-color: #fafafa;
  -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
          border-radius: 3px;
  border: 1px solid #cccccc;
  margin-bottom: 10px;
  padding: 5px;
  font-size: 1.1em;
}
 
form input#submit {
  display: block;
  -webkit-border-radius: 3px; 
     -moz-border-radius: 3px;
          border-radius: 3px;
  border:1px solid #d8d8d8;
  padding: 10px; 
  font-weight:bold; 
  text-align: center; 
  color: #000000; 
  background-color: #f4f4f4;
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #f4f4f4), color-stop(100%, #e5e5e5));
  background-image: -webkit-linear-gradient(top, #f4f4f4, #e5e5e5);
  background-image: -moz-linear-gradient(top, #f4f4f4, #e5e5e5);
  background-image: -ms-linear-gradient(top, #f4f4f4, #e5e5e5);
  background-image: -o-linear-gradient(top, #f4f4f4, #e5e5e5);
  background-image: linear-gradient(top, #f4f4f4, #e5e5e5);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#f4f4f4, endColorstr=#e5e5e5);
}
 
form input#submit:hover{
  cursor: pointer;
  border:1px solid #c1c1c1; 
  background-color: #dbdbdb;
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#dbdbdb), color-stop(100%, #cccccc));
  background-image: -webkit-linear-gradient(top, #dbdbdb, #cccccc);
  background-image: -moz-linear-gradient(top, #dbdbdb, #cccccc);
  background-image: -ms-linear-gradient(top, #dbdbdb, #cccccc);
  background-image: -o-linear-gradient(top, #dbdbdb, #cccccc);
  background-image: linear-gradient(top, #dbdbdb, #cccccc);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#dbdbdb, endColorstr=#cccccc);
}

/* Message flashing */
.flash {
  background-color: #FBB0B0;
  padding: 10px;
  width: 400px;
}

/* Shopify buy button */
.my-product-grid {
  padding: 0;
  margin: 0 auto;
  max-width: 1100px;
  box-sizing: border-box;
  display: block;
}

.my-product-row {
  display: block;
  width: 100%;
  clear: both;
}

.my-product-embed {
    padding: 0 10px 20px 10px;
    margin: 0;
    width: 25%;
    box-sizing: border-box;
    display: block;
    float: left;
}


@media screen and (max-width: 900px) {
  .my-product-embed {
    width: 33%;
  }
}

@media screen and (max-width: 600px) {
  .my-product-embed {
    width: 100%;
  }
}

.mapboxgl-ctrl-group {
    height: 90pt;
    width: 30pt;
    margin: 10 10pt 20pt 0 !important;
}

.mapboxgl-ctrl-group > .mapboxgl-ctrl-icon {
    width: 30pt;
    height: 30pt;
}

.mapboxgl-ctrl-group > .mapboxgl-ctrl-icon > .arrow {
    width: 25pt !important;
    height: 25pt !important;
}
.legend-container {
    position: absolute;
    top: 200px;
    left: 0;
    padding: 0 10px;
    margin-bottom: 30px;
    z-index: 1;
}

.legend {
    font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
    background-color: #fff;
    padding: 10px;
    border-radius: 3px;
    box-shadow: 0 1px 2px rgba(0,0,0,0.10);
}

.legend h4 {
    margin: 0 0 10px;
}

.legend-key {
    display: inline-block;
    border-radius: 50%;
    width: 10px;
    height: 10px;
    margin-right: 5px;
}
</style>

